fix header z-index problem

--- a/frontend/src/styles/Header.css
+++ b/frontend/src/styles/Header.css
@@ -14,7 +14,7 @@ header {
 .header-desktop {
   position: sticky;
   top: 16px;
-  z-index: 1000;
+  z-index: 10000000;
 
   display: flex;
   align-items: center;
@@ -31,6 +31,12 @@ header {
   border-radius: 64px;
   background: var(--dark-opacity-10);
   margin-bottom: 16px;
+}
+.header-tablet {
+  z-index: 10000000;
+}
+.header-desktop {
+  z-index: 10000000;
 }
 
 .hdrezka-header-input-container {
